deployment/deploymentconfig.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: dashboard
  namespace: lab-ocp-cns
  labels:
    app: dashboard
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - terminal
        from:
          kind: ImageStreamTag
          namespace: lab-ocp-cns
          name: 'dashboard:development'
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: dashboard
    deploymentconfig: dashboard
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dashboard
        deploymentconfig: dashboard
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      restartPolicy: Always
      serviceAccountName: dashboard-user
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: terminal
          ports:
            - containerPort: 10080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: envvars
              mountPath: /opt/workshop/envvars
          terminationMessagePolicy: File
          image: >-
            quay.io/geoallen/lab-sample-workshop@sha256:391f7ed8e661278c6ef45df7052f864331f9cc1c2a2a2bcdbcc71a5ee87f617f
        - name: console
          image: 'quay.io/openshift/origin-console:latest'
          command:
            - /opt/bridge/bin/bridge
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      serviceAccount: dashboard-user
      volumes:
        - name: envvars
          secret:
            secretName: dashboard-env
            defaultMode: 420
      dnsPolicy: ClusterFirst
