deployment/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dashboard
  namespace: lab-ocp-cns
  labels:
    app: dashboard
spec:
  subdomain: dashboard-lab-ocp-cns
  to:
    kind: Service
    name: dashboard
    weight: 100
  port:
    targetPort: 10080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
